crates/panache-parser/tests/snapshots/yaml__yaml_suite_DE56__00.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DE56/00
input: "\"1 trailing\\t\n    tab\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
