crates/panache-parser/tests/snapshots/yaml__yaml_suite_DE56__03.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DE56/03
input: "\"4 trailing\\\t  \n    tab\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
