crates/panache-parser/tests/snapshots/yaml__yaml_suite_DE56__05.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DE56/05
input: "\"6 trailing\t  \n    tab\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
